modules/vpc/main.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support = var.enable_dns_support

  tags = merge(var.tags,{
    Name = "bootcamp-vpc"
  })
}

data "aws_availability_zones" "available" {
  state = "available"
}

#public subnets
resource "aws_subnet" "public" {
  count = var.availability_zone_count
  vpc_id = aws_vpc.this.id
  cidr_block = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = merge(var.tags,{
    Name = "bootcamp-public-subnet-${count.index + 1}"
  })
}

#private subnets
resource "aws_subnet" "private" {
  count = var.availability_zone_count
  vpc_id = aws_vpc.this.id
  cidr_block = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index + var.availability_zone_count)
  availability_zone = data.aws_availability_zones.available.names[count.index]
tags = merge(var.tags,{
    Name = "bootcamp-private-subnet-${count.index + 1}"
  })
}

#internet gateway
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags,{
    Name = "bootcamp-igw"
  })
}

#public route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags,{
    Name = "bootcamp-public-rt"
  })
}

#public route
resource "aws_route" "public_internet_access" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.this.id
}

#associate public subnets with public route table
resource "aws_route_table_association" "public" {
  count = var.availability_zone_count
  subnet_id = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

#nat gateway eip
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = merge(var.tags,{
    Name = "bootcamp-nat-ip"
  })
}

#nat gateway
resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public[0].id

  tags = merge(var.tags,{
    Name = "bootcamp-nat"
  })
}

#private route table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags,{
    Name = "bootcamp-private-rt"
  })
}

#private route
resource "aws_route" "private_nat_gateway" {
  route_table_id = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.this.id
}

#associate private subnets with private route table
resource "aws_route_table_association" "private" {
  count = var.availability_zone_count
  subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

resource "aws_security_group" "public_sg" {
  name = "eksbookcamp-sg"
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags,{
    Name = "bootcamp-public-sg"
  })
}

resource "aws_security_group_rule" "sg_ingress_public_443" {
  security_group_id = aws_security_group.public_sg.id
  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "sg_ingress_public_80" {
  security_group_id = aws_security_group.public_sg.id
  type = "ingress"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "sg_egrees_public" {
  security_group_id = aws_security_group.public_sg.id
  type = "egress"
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}
